# golang-bazel-sample

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod
cmd/: main.go
internal/greeter/: greeter_test.go
