load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
go_binary(
    name = "main",
    srcs = ["cmd/main.go"],
    deps = ["greeter"],
)

go_library(
    name = "greeter",
    importpath = "github.com/leetcode-golang-classroom/golang-bazel-sample/internal/greeter",
    srcs = ["internal/greeter/greeter.go"],
)

go_test(
    name = "greeter_test",
    srcs = ["internal/greeter/greeter_test.go"],
    embed = ["greeter"],
)

